=== rmw ChangeLog ===

2020-06-29

  * add '-m, --most-recent-list' option: list most recently rmw'ed files

2020-06-16

  * rmw v0.7.05 released

  * rmw will now refuse to move a waste folder or a file that resides
  within a waste folder (This feature was in place before, but at some
  point Andy accidentally removed the code).

2020-06-07

  * Feature removed: restore with '-z' using only the basename from any
  directory. User must be in a Trash directory or specify the full path
  (e.g. rmw -z ~/.local/share/Trash/foo.bar). For details, see issue
  #272.

2020-05-28

  * Fixed broken purge test

2020-05-18

  * Fix for compiling with gcc 10 (Thanks to muralikodali and GazL)

2019-11-27

  * Added '-R' option, changed '--recurse' option to '--recursive',
  added recursive (rm compatibility) options in --help output, fixed
  message shown when using '-r, --recursive'

2019-08-12

  * rmw v0.7.04 has been released.

  * The config file is now read from $XDG_CONFIG_HOME/rmwrc or
  ~/.config/rmwrc.

  * `lastpurge` is now 'purge-time' and stored in $XDG_DATA_HOME/rmw or
  ~/.local/share/rmw.

  * `lastrmw` is now 'mrl' and stored in $XDG_DATA_HOME/rmw or
  ~/.local/share/rmw.

  * The default Waste folder (specified in the configuration file) is now
  ~/.local/share/Waste instead of ~/trash.rmw.

  * The ~/.config/rmw directory is no longer used. It can be deleted,
  but you may first want to copy your old configuration file to the new
  location.


2019-08-06

  * To get user's home dir, revert back to retrieving via environmental
  variable (conforms to FreeDesktop Trash Spec).

  * on DragonFlyBSD, it's no longer required to use `env
  MENU_LIBS=-lmenu` when running configure
  <https://gitlab.com/andy5995/rmw/issues/220>

2019-08-06

  * rmw v0.7.03 has been released.

2019-07-30

  * rmw now gets the user's HOMEDIR from a passwd struct (see
  <https://linux.die.net/man/3/getpwnam>), not from the environmental
  variable.
